# stock_forecast

./: GEMINI.md  README.md  app.py  pyproject.toml
data/: cache.duckdb
src/: advisor.py  backtest.py  config.py  features.py  indicators.py  plotting.py  storage_duckdb.py
src/models/: automfles.py  base.py  config.py  lgbm.py  moving_average.py  nixtla_adapter.py  random_forest.py
src/providers/: base.py  stooq.py
tests/: test_smoke.py
