[project]
name = "stock-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.3",
    "lightgbm>=4.6.0",
    "mlforecast>=1.0.2",
    "numpy<2.4",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "plotly>=6.5.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "statsforecast>=2.0.3",
    "streamlit>=1.52.2",
    "utilsforecast>=0.2.15",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
